--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vijay Sansuddi
-logo: /assets/img/logo.png
+logo: /assets/img/log.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
