--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Vijay Sansuddi
+title: <p align="center"> Vijay Sansuddi </p>
 logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
