--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Vijay Sansuddi </p>
-logo: /assets/img/logo.png
+logo: /assets/img/Vijay.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
